force-app/main/default/objects/Order_Line_Approval__c/Order_Line_Approval__c.object-meta.xml
<CustomObject>
    <label>Order Line Approval</label>
    <nameField>
        <displayFormat>OLA{0000}</displayFormat>
        <label>Order Line Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>