force-app/main/default/objects/Order_Line_Approval__c/fields/Ceiling_Price__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Price__c</fullName>
    <description>Implement as part of GCPM-4521</description>
    <label>Ceiling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>