force-app/main/default/objects/Order_Line_Approval__c/fields/Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order__c</fullName>
    <label>Customer Purchase Order #</label>
    <type>TextArea</type>
</CustomField>