force-app/main/default/objects/Order_Line_Approval__c/fields/Final_Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreed_Price__c</fullName>
    <label>Final Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>