force-app/main/default/objects/Order_Line_Approval__c/fields/FPD_List_Price__c.field-meta.xml
<CustomField>
    <fullName>FPD_List_Price__c</fullName>
    <label>FPD List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>