force-app/main/default/objects/Order_Line_Approval__c/fields/MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup__c</fullName>
    <formula>TEXT(OrderItem__r.Product2.PMC_CPQ_MaterialGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MaterialGroup</label>
    <type>Text</type>
</CustomField>