force-app/main/default/objects/Order_Line_Approval__c/fields/Order_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Status__c</fullName>
    <label>Order Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>