force-app/main/default/objects/Order_Line_Approval__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Line Approvals</relationshipLabel>
    <relationshipName>Order_Line_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>