force-app/main/default/objects/Order_Line_Approval__c/fields/PMC_CPQ_AboveCeiling_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AboveCeiling_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Above Ceiling Approval Required</label>
    <type>Checkbox</type>
</CustomField>