force-app/main/default/objects/Order_Line_Approval__c/fields/PMC_CPQ_QuoteRecordSubType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
    <description>Implemented as part of GCPM-4521 in order to support Raw Material Approvals</description>
    <formula>TEXT(Quote__r.PMC_CPQ_QuoteRecordSubType__c)</formula>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>