force-app/main/default/objects/Order_Line_Approval__c/fields/Price_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_By_Date__c</fullName>
    <label>Price By Date</label>
    <type>Date</type>
</CustomField>