force-app/main/default/objects/Order_Line_Approval__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>