force-app/main/default/objects/Order_Line_Approval__c/fields/SAP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Number__c</fullName>
    <label>SAP Order Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>